# song2vec

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
song2vec/: db.py  models.py  orm.py  utils.py
song2vec/cli/: __main__.py  load.py  settings.py
song2vec/data/: datasets.py
song2vec/models/: continous_bag_of_words.py
tests/: test_models.py  test_utils.py
tests/data/: mpd.slice.0-2.json  mpd.slice.2-3.json  test.db
tests/db/: test_load.py  test_models.py  tests_dataset.py  utils.py
tests/models/: test_continous_bag_of_words.py
