[tool.poetry]
name = "song2vec"
version = "0.1.0"
description = ""
authors = ["Steven Jin <stevenjin8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sklearn = "^0.0"
numpy = "^1.21.1"
pandas = "^1.3.2"
matplotlib = "^3.4.3"
black = "^21.7b0"
pylint = "^2.9.6"
isort = "^4.0.0"
tqdm = "^4.62.1"
pytest = "^6.2.4"
SQLAlchemy = "^1.4.22"
jupyter = "^1.0.0"
coverage = "^5.5"
seaborn = "^0.11.2"
python-dotenv = "^0.19.0"
torch = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
song2vec = 'song2vec.cli.__main__:cli'